--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "db68fedb-d672-4336-ad21-940abfce6c88",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "14f14f4a-beab-4386-b4a7-364cb78ab8b9",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "9ea9e4ed-36c3-4aae-9a36-a3f73418b69a",
    "metadata": {
     "scrolled": true,
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "0872f6b3-f352-4001-a0db-b692095e7794",
    "metadata": {},
    "outputs": [
@@ -105,49 +105,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b8c8b6f7-04db-460e-9234-5a472c243a25",
+   "execution_count": 58,
+   "id": "f423d50f-bafc-4bf6-ac91-d6fddacd52f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Navigate to the page\n",
+    "img_url = 'https://spaceimages-mars.com/'\n",
+    "browser.visit(img_url)\n",
+    "\n",
+    "\n",
+    "# Find figure to retrieve section that has image url\n",
+    "jpl_html = browser.html\n",
+    "jpl_soup = bs(jpl_html, \"html.parser\")\n",
+    "jpl_img_result = jpl_soup.find(\"a\", class_=\"showimg fancybox-thumbs\")\n",
+    "jpl_img_result1 = jpl_img_result[\"href\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "fc8fb0ba-e52a-4d71-a8df-7f10afcd7e00",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Navigate to the page\n",
-    "img_url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
-    "browser.visit(img_url)\n",
-    "\n",
-    "time.sleep(4)\n",
-    "\n",
-    "# Assign the HTML content of the page to a variable\n",
-    "imgs_html = browser.html\n",
-    "# Parse HTML with Beautifulsoup\n",
-    "soup = bs(imgs_html,'html.parser')\n",
-    "\n",
-    "# Find the image url for the current Featured Mars Image\n",
-    "img_result = soup.find('article', class_=\"lede full_width\")\n",
-    "print(img_result)\n",
-    "# img_url = img_result.replace(\"background-image: url('\",\"\").replace(\"');\",\"\")\n",
-    "# featured_image_url = f\"https://www.jpl.nasa.gov{img_url}\"\n",
-    "\n",
-    "# print(featured_image_url)\n",
-    "\n"
+    "# Find the image url to the full size .jpg image\n",
+    "featured_image_url = img_url + jpl_img_result1\n",
+    "featured_image_url"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9626b8-b0d6-45f7-b983-2790426738e5",
+   "id": "d72efaad-dba4-478e-911f-088dcb893605",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11f4e25f-6246-4da7-b74a-303df104a0d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "236c292a-2519-445f-8561-e4e0e020073a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fadbe697-461f-4771-b429-58efc7309380",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9a84eb1-66f1-4a40-ac66-749b5b38ec58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !jupyter nbconvert --to script mission_to_mars.ipynb\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
